--- a/eathena-data/conf/login_local.conf.example
+++ b/eathena-data/conf/login_local.conf.example
@@ -24,7 +24,4 @@ gm_pass: gm
 // Update host
 // Tells the client that an alternative updatehost is available if the client
 // supports this. If left out nothing will be sent. max length 127.
-update_host: http://update.themanaworld.com.br/
-
-// Servidor de updates de testes:
-// update_host: http://themanaworld-br.googlecode.com/svn/updates/
+update_host: http://tmw-alchemist.googlecode.com/svn/update/
